[package]
name = "mothrbox"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = {version = "0.13.0", features = ["ecdh"]}
aes-gcm =  { version = "0.10", features = ["std"] }
rand = "0.8"
sha2 = "0.10" 
hex = "0.4"
rayon = "1.10.0"
anyhow = "1.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
mongodb = "3.2.3"
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
futures = "0.3.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
actix = "0.13.5"
jsonwebtoken = "9.3.1"
chrono = {version = "0.4.40", features = ["serde"]}
hmac = "0.12.1"
uuid = "1.16.0"
lazy_static = "1.5.0"
bcrypt = "0.17.0"
rocket_cors = "0.6.0"