[package]
name = "mothrbox"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = {version = "0.13.0", features = ["ecdh"]}
aes-gcm =  { version = "0.10", features = ["std"] }
rand = "0.8"
sha2 = "0.10" 
hex = "0.4"
rayon = "1.10.0"
#serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
actix = "0.13.5"
chrono = {version = "0.4.40", features = ["serde"]}
hmac = "0.12.1"
lazy_static = "1.5.0"
bcrypt = "0.17.0"
actix-web = "4.4"
base64 = "0.22.1"

# Actix Web dependencies
actix-multipart = "0.6"
actix-cors = "0.6"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
derive_more = "0.99.17"
thiserror = "1.0"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0.98"
