[package]
name = "mothrbox"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = {version = "0.13.0", features = ["ecdh"]}
aes-gcm =  { version = "0.10", features = ["std"] }
rand = "0.8"
sha2 = "0.10.9" 
hex = "0.4"
rayon = "1.10.0"
#serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
chrono = {version = "0.4.41", features = ["serde"]}
hmac = "0.12.1"
lazy_static = "1.5.0"
bcrypt = "0.17.0"
base64 = "0.22.1"


# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
# derive_more = "2.0.1"
thiserror = "2.0.12"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
generic-array = "0.14"

# rocket
rocket = { version = "0.5.1", features = ["json"] }

aes = "0.8"
ctr = "0.9"
cipher = "0.4"  
rocket_cors = "0.6.0"
